--- a/report/main.tex
+++ b/report/main.tex
@@ -24,19 +24,23 @@
 
 \begin{enumerate}[(i)]
   \item sensitivity to kernel
-  \item issues in high dimensions(large p)
+  \item issues in high dimensions (large p)
 \end{enumerate}
 
 \subsection{Semi-solutions}
 
 \begin{enumerate}
   \item \textbf{C-Bayes}. All derivations from assumed models (e.g. kernel misspecification). See \cite{miller2018robust}.
+  \item \textbf{Model plus distance-based clustering}.
+  See \cite{duan2018bayesian}.
+  \item \textbf{Calculating better distances}. E.g., geodesic or intrinsic distace (Didong Li \& Dunson, in preparation).
+  \item \textbf{To address issues in high dimensions}, cluster on the latent variable level or varational autoencoder (VAE). 
 \end{enumerate}
 
 
 
 
 \bibliography{tm-bib}
-\bibliographystyle{unsrt}
+\bibliographystyle{apalike}
 
 \end{document}
