--- a/report/tm-bib.bib
+++ b/report/tm-bib.bib
@@ -5,5 +5,12 @@
   pages={1--13},
   year={2018},
   publisher={Taylor \& Francis}
-}
+},
+---
+@article{duan2018bayesian,
+  title={Bayesian Distance Clustering},
+  author={Duan, Leo L and Dunson, David B},
+  journal={arXiv preprint arXiv:1810.08537},
+  year={2018}
+},
 ---
