--- a/report/main.tex
+++ b/report/main.tex
@@ -11,14 +11,18 @@
 
 \maketitle
 
+
+
 \section{Possible Research Directions}
+
 
 \subsection{Two main approaches to clustering}
 
 \begin{enumerate}[(i)]
   \item \textbf{Distance-based} clustering. Using this approach, we analyze matrix of pairwise distances. Namely, suppose $y_i$ and $y_j$ are data points, then $D$ is a distance matrix whose $d_{ij}$ entry represents distance between $y_i$ and $y_j$.
-  \item \textbf{Model-based} clustering. For example, $y_i \sim \sum_{h = 1}^k \pi_h k(\theta_h)$.
+  \item \textbf{Model-based} clustering. For example, $y_i \sim \sum_{h = 1}^k \pi_h \mathcal{K}(\theta_h)$.
 \end{enumerate}
+
 
 \subsection{Two main problems in clustering}
 
@@ -26,6 +30,7 @@
   \item sensitivity to kernel
   \item issues in high dimensions (large p)
 \end{enumerate}
+
 
 \subsection{Semi-solutions}
 
@@ -37,6 +42,9 @@
   \item \textbf{To address issues in high dimensions}, cluster on the latent variable level or varational autoencoder (VAE). 
 \end{enumerate}
 
+
+
+\section{Literature review}
 
 
 
