--- a/report/main.tex
+++ b/report/main.tex
@@ -44,8 +44,33 @@
 
 
 
-\section{Literature review}
+\section{Literature Review}
 
+Three main tasks in textmining are clustering, classification, and information extraction \cite{allahyari2017brief}. Topic modeling can be applied to all of these tasks \cite{lu2011investigating}. We would like to focus on the most commonly used topic model, Latent Dirichlet Allocation (LDA), and LDA's robustness in the documeng clustering task. Lu et al. investigated LDA's task performance in document clustering and found LDA's performance is quite sensitive to the setting of its hyper-parameter and parameter \cite{lu2011investigating}. In terms of robustness, Wang et al. proposed a model-based approach to make LDA more robust by using localization and empirical Bayes \cite{wang2018general}.
+
+
+\subsection{Latent Dirichlet Allocation (LDA)}
+
+Here, we reproduce LDA introduced in \cite{wang2018general}.
+
+
+
+
+
+\section{Pilot Study}
+
+
+\section{Annotated Bibliography}
+\cite{wang2018general}
+Title: A general method for robust Bayesian Modeling
+This apaper proposes a general model-based approach to robustify Bayesian models.
+
+\cite{doyle2009accounting}
+Bursty Bayesian models.
+
+\cite{blei2003latent}
+Title: Latent dirichlet allocation
+An introduction to latent dirichlet allocation.
 
 
 \bibliography{tm-bib}
