--- a/report/tm-bib.bib
+++ b/report/tm-bib.bib
@@ -14,3 +14,50 @@
   year={2018}
 },
 ---
+@article{wang2018general,
+  title={A general method for robust Bayesian modeling},
+  author={Wang, Chong and Blei, David M and others},
+  journal={Bayesian Analysis},
+  volume={13},
+  number={4},
+  pages={1159--1187},
+  year={2018},
+  publisher={International Society for Bayesian Analysis}
+}
+---
+@article{blei2003latent,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
+}
+---
+@inproceedings{doyle2009accounting,
+  title={Accounting for burstiness in topic models},
+  author={Doyle, Gabriel and Elkan, Charles},
+  booktitle={Proceedings of the 26th Annual International Conference on Machine Learning},
+  pages={281--288},
+  year={2009},
+  organization={ACM}
+}
+---
+@article{allahyari2017brief,
+  title={A brief survey of text mining: Classification, clustering and extraction techniques},
+  author={Allahyari, Mehdi and Pouriyeh, Seyedamin and Assefi, Mehdi and Safaei, Saied and Trippe, Elizabeth D and Gutierrez, Juan B and Kochut, Krys},
+  journal={arXiv preprint arXiv:1707.02919},
+  year={2017}
+}
+---
+@article{lu2011investigating,
+  title={Investigating task performance of probabilistic topic models: an empirical study of PLSA and LDA},
+  author={Lu, Yue and Mei, Qiaozhu and Zhai, ChengXiang},
+  journal={Information Retrieval},
+  volume={14},
+  number={2},
+  pages={178--203},
+  year={2011},
+  publisher={Springer}
+}
