--- a/report/tm-bib.bib
+++ b/report/tm-bib.bib
@@ -61,3 +61,14 @@
   year={2011},
   publisher={Springer}
 }
+---
+@article{blei2007correlated,
+  title={A correlated topic model of science},
+  author={Blei, David M and Lafferty, John D and others},
+  journal={The Annals of Applied Statistics},
+  volume={1},
+  number={1},
+  pages={17--35},
+  year={2007},
+  publisher={Institute of Mathematical Statistics}
+}
