--- a/report/tm-bib.bib
+++ b/report/tm-bib.bib
@@ -72,3 +72,31 @@
   year={2007},
   publisher={Institute of Mathematical Statistics}
 }
+---
+@article{blei2012probablistic,
+ author = {Blei, David M.},
+ title = {Probabilistic Topic Models},
+ journal = {Commun. ACM},
+ issue_date = {April 2012},
+ volume = {55},
+ number = {4},
+ month = apr,
+ year = {2012},
+ issn = {0001-0782},
+ pages = {77--84},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2133806.2133826},
+ doi = {10.1145/2133806.2133826},
+ acmid = {2133826},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+---
+@incollection{blei2009topic,
+  title={Topic models},
+  author={Blei, David M and Lafferty, John D},
+  booktitle={Text Mining},
+  pages={101--124},
+  year={2009},
+  publisher={Chapman and Hall/CRC}
+}
