--- a/report/main.tex
+++ b/report/main.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}
 \usepackage{tikz}
 \usetikzlibrary{bayesnet}
+\usepackage{microtype}
 
 \title{Topic Modeling Research}
 \author{Melody Jiang}
@@ -56,26 +57,41 @@ Three main tasks in textmining are clustering, classification, and information e
 
 \subsection{Latent Dirichlet Allocation (LDA)}
 
-Here, we reproduce the LDA model described in \cite{wang2018general}.
+In this section, we reproduce the LDA model described in \cite{wang2018general} and \cite{blei2009topic}.
 
-We define each topic $\beta_k$ to be a distribution over a fixed vocabulary and we fix the number of topics $K$. LDA assumes that a collection of documents comes from the following process:
+Let:
+
+\begin{itemize}
+  \item $K$ be a specified number of topics,
+  \item $D$ the number of documents,
+  \item $N_d$ the number of words in a document,
+  \item $V$  the size of the vocabulary,
+  \item $\boldsymbol{\alpha}$ a positive K-vector,
+  \item $\eta$ a scalar. 
+  \item $Dir_K(\boldsymbol{\alpha})$ a K-dimensional Dirichlet distribution with vector parameter $\boldsymbol{\alpha}$,
+  \item $Dir_V(\eta)$ a V-Dimensional symmetric Dirichlet distribution with scalar parameter $\eta$.
+\end{itemize}
+
+A \textit{symmetric Dirichlet} is a Dirichlet distribution where each component of the parameter is equal to the same value.
+
+We define each topic $\boldsymbol{\beta}_k$ to be a distribution over a fixed vocabulary and we fix the number of topics $K$. LDA assumes that a collection of documents comes from the following process:
 
 \begin{enumerate}
-  \item Draw each topic $\beta_k \sim Dir(\eta)$ for k = 1, 2, ..., K.
+  \item Draw each topic $\boldsymbol{\beta}_k \sim Dir_V(\eta)$ for k = 1, 2, ..., K.
   \item For each document $d$ ($d = 1, ..., D$),
   \begin{enumerate}
-    \item Draw topic proportion $\theta_d \sim Dir(\alpha)$
-    \item For each word $n$ ($n = 1, ..., N_d$) in document $d$,
+    \item Draw a vector of topic proportions $\boldsymbol{\theta}_d \sim Dir_K(\boldsymbol{\alpha})$
+    \item For each word $w_n$ ($n = 1, ..., N_d$) in document $d$,
     \begin{enumerate}
-      \item Draw topic assignment of the word $z_{dn} \sim Mult(\theta_d)$.
-      \item Draw word $w_{dn} \sim Mult(\beta_{z_{dn}})$.
+      \item Draw topic assignment $z_{dn} \sim Mult(\boldsymbol{\theta}_d)$, where $z_{dn} \in \{1, ..., K\}$.
+      \item Draw word $w_{dn} \sim Mult(\boldsymbol{\beta}_{z_{dn}})$, where $w_{dn} \in \{1, ..., V\}$.
     \end{enumerate}
   \end{enumerate}
 \end{enumerate}
 
-See Figure \ref{fig:gaphical_model_lda} for a graphical representation of LDA.
+See Figure \ref{fig:gaphical_model_lda} for a directed graphical model of LDA.
 
-\begin{figure}[h]
+\begin{figure}
   \centering
   \begin{tikzpicture}
 
@@ -100,7 +116,7 @@ See Figure \ref{fig:gaphical_model_lda} for a graphical representation of LDA.
     \plate {} {(beta)} {$K$};
   
   \end{tikzpicture}
-  \caption{The graphical model of LDA. Adopted from Blei \cite{blei2012probablistic}.}
+  \caption{The directed graphical model of LDA. Adapted from \cite{blei2012probablistic} and \cite{blei2009topic}. Nodes denote random variables; edges denote dependence between random variables. Shaded nodes denote observed random variables; unshaded nodes denote hidden random variables. The rectangular boxes are ``plate notation", which denote replication.}
   \label{fig:gaphical_model_lda}
 \end{figure}
 
